[gd_scene load_steps=6 format=3 uid="uid://bh0vwv5r012lg"]

[ext_resource type="Theme" uid="uid://dxxo6yftwqajq" path="res://theme/main_theme.tres" id="1_3c5o3"]
[ext_resource type="Script" path="res://scripts/input_handler.gd" id="3_3bd21"]
[ext_resource type="Script" path="res://scripts/file_reader.gd" id="4_bsidj"]
[ext_resource type="Script" path="res://scripts/files_loader.gd" id="4_kby45"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rebsd"]

[node name="MainInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3c5o3")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="MainContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="WorkContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CatalogView" type="PanelContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CatalogContainer" type="VBoxContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/CatalogView"]
layout_mode = 2

[node name="FileTree" type="Tree" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/CatalogView/CatalogContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_3c5o3")
hide_root = true

[node name="PanelContainer" type="PanelContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer"]
layout_mode = 2

[node name="CodeContainer" type="VBoxContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="FilesTabContainer" type="TabContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer/CodeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_constants/side_margin = 0
drag_to_rearrange_enabled = true
tab_focus_mode = 0

[node name="Separator" type="HSeparator" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer/CodeContainer"]
layout_mode = 2

[node name="CodeEditContainer" type="HBoxContainer" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer/CodeContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="Control" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer/CodeContainer/CodeEditContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer/CodeContainer/CodeEditContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_3c5o3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rebsd")
gutters_draw_line_numbers = true

[node name="DirSelected" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(454, 159)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("3_3bd21")

[node name="FileLoader" type="Node" parent="."]
script = ExtResource("4_kby45")

[node name="FileReader" type="Node" parent="."]
script = ExtResource("4_bsidj")

[connection signal="item_activated" from="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/CatalogView/CatalogContainer/FileTree" to="FileLoader" method="_on_file_tree_item_activated"]
[connection signal="item_activated" from="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/CatalogView/CatalogContainer/FileTree" to="FileReader" method="_on_file_tree_item_activated"]
[connection signal="tab_changed" from="Panel/MarginContainer/MainContainer/WorkContainer/SplitContainer/PanelContainer/CodeContainer/FilesTabContainer" to="FileReader" method="_on_files_tab_container_tab_changed"]
[connection signal="dir_selected" from="DirSelected" to="FileLoader" method="_on_dir_selected_dir_selected"]
